# cenipa-etl

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
cenipa_etl/: etl.py  extractor.py  helper.py  loader.py  run.py  transformer.py
