[project]
name = "cenipa-etl"
version = "0.1.0"
description = ""
authors = [
    {name = "David",email = "david.dumke@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "google-cloud-bigquery (>=3.29.0,<4.0.0)",
    "google-auth (>=2.38.0,<3.0.0)",
    "google-auth-oauthlib (>=1.2.1,<2.0.0)",
    "google-auth-httplib2 (>=0.2.0,<0.3.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pyarrow (>=19.0.1,<20.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
